--- a/mag/.magicrc
+++ b/mag/.magicrc
@@ -8,8 +8,8 @@ if {[lindex $scalefac 1] < 2} {
     scalegrid 1 2
 }
 
-# drc off
-drc euclidean on
+drc off
+# drc euclidean on
 
 # Allow override of PDK path from environment variable PDKPATH
 if {[catch {set PDKPATH $env(PDKPATH)}]} {
