--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.def filter=lfs diff=lfs merge=lfs -text
 *.lef filter=lfs diff=lfs merge=lfs -text
 *.gds filter=lfs diff=lfs merge=lfs -text
+*.mag filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
